<resources>
    <string name="app_name">Eventer</string>
    <string name="welcome">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>


    <!-- Bottom  menu items -->
    <string name="Home">Home</string>
    <string name="Add">Add</string>
    <string name="Account">Account</string>
    <string name="Notice">Notice</string>
    <string name="Settings">Settings</string>

    <!-- Register And Login items -->
    <string name="Registration">Register</string>
    <string name="create_new_account">Create New Account</string>
    <string name="Login">Login</string>
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Email">Email</string>
    <string name="AlreadyRegistered">ALREADY REGISTERED?</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="DontHaveAccount">DON`T HAVE ACCOUNT?</string>
    <string name="ResetPasswordTextView">Reset Password</string>
    <string name="ResetPassword">RESET</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="back_to_login">Back to Login</string>
    <string name="to_enter_your_account">to enter your account</string>
    <string name="enter_the_email_and_we_ll_send_an_email_with_instructions_to_reset_your_password">Enter the email and we\'ll send an email with instructions to reset your password</string>

    <!-- Profile Items -->
    <string name="emailNotVerified">Account not verified</string>
    <string name="Verification">Select type of Verification</string>
    <string name="byPhoneNumber">By Phone Number</string>
    <string name="byEmail">By Email</string>
    <string name="LogOut">LogOut</string>
    <string name="AccountSettings">Account Settings</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="DefaultProfileView">empty</string>
    <string name="emailVerified">Verified</string>
    <string name="facebook">Facebook</string>

    <!-- Add Form Items -->
    <string name="PhoneNumberSecond">Phone Number:</string>
    <string name="author">Author</string>
    <string name="Theme">Theme</string>
    <string name="Description">Description</string>
    <string name="Date">Date</string>
    <string name="DateSecond">Date:</string>
    <string name="Status">Status</string>
    <string name="Location">Location</string>
    <string name="CreateYourEvent">CREATE YOUR EVENT</string>
    <string name="createEvent">CREATE EVENT</string>





</resources>