<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/register_container"
    android:orientation="vertical"
    tools:context=".Fragments.Auth.RegisterFragment">
    <RelativeLayout
        android:id="@+id/resetLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/reset_pass_top_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/anton"
            android:gravity="center"
            android:text="@string/create_new_account"
            android:textColor="@color/lightOrange"
            android:textSize="40sp" />
    </RelativeLayout>

    <LinearLayout

        android:id="@+id/registerViews"
        android:layout_width="350dp"
        android:layout_height="370dp"
        android:layout_below="@id/resetLayout"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@drawable/bottom_shape_navigation"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_person"
            android:drawablePadding="5dp"
            android:hint="@string/UserName"
            android:paddingStart="15dp"
            android:textColor="@color/dark_grey"
            android:textColorHint="@color/dark_grey" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_security"
            android:drawablePadding="5dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textColor="@color/dark_grey"
            android:textColorHint="@color/dark_grey" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_verified_user"
            android:drawablePadding="5dp"
            android:hint="@string/ConfirmPassword"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textColor="@color/dark_grey"
            android:textColorHint="@color/dark_grey" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_email"
            android:drawablePadding="5dp"
            android:hint="@string/Email"
            android:paddingStart="15dp"
            android:textColor="@color/dark_grey"
            android:textColorHint="@color/dark_grey" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/Registration"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml,DuplicateSpeakableTextCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/registerViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AlreadyRegistered"
            android:textAlignment="center"
            android:textColor="@color/dark_grey"/>
        <TextView
            android:id="@+id/sigInTextView"
            android:textColor="@color/lightOrange"
            android:text="@string/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
             />

    </LinearLayout>


</RelativeLayout>