<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.Auth.LoginFragment">

    <RelativeLayout
        android:id="@+id/resetLayout"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="200dp"
        android:background="@drawable/reset_pass_top_layout">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:fontFamily="@font/anton"
            android:text="@string/Login"
            android:textColor="@color/lightOrange"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginTextView"
            android:gravity="center"
            android:text="@string/to_enter_your_account"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/loginViews"
        android:layout_width="350dp"
        android:layout_height="330dp"
        android:layout_below="@+id/resetLayout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bottom_shape_navigation"
        android:orientation="vertical">


        <EditText
            android:id="@+id/emailSignUP"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_email"
            android:drawablePadding="5dp"
            android:hint="@string/Email"
            android:paddingStart="15dp"
            android:textColor="@color/dark_grey"
            android:textColorHint="@color/dark_grey" />

        <EditText
            android:id="@+id/passwordSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_security"
            android:drawablePadding="5dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textColor="@color/dark_grey"
            android:textColorHint="@color/dark_grey" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/LogInBtn"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/Login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/ForgotPassword"
            android:textColor="@color/dark_grey"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/loginViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DontHaveAccount"
            android:textColor="@color/dark_grey"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:textSize="15sp"
            android:text="@string/Registration"
            android:textColor="@color/lightOrange"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>