<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".Fragments.Auth.ResetPasswordFragment">


    <RelativeLayout
        android:id="@+id/resetLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/reset_pass_top_layout">


        <ImageView
            android:id="@+id/backToLoginBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_backspace" />

        <TextView
            android:id="@+id/reserTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:fontFamily="@font/anton"
            android:text="@string/ForgotPassword"
            android:textColor="@color/lightOrange"
            android:textSize="40sp" />

        <TextView
            android:layout_centerInParent="true"
            android:layout_width="318dp"
            android:layout_height="70dp"
            android:layout_below="@id/reserTextView"
            android:gravity="center"
            android:text="@string/enter_the_email_and_we_ll_send_an_email_with_instructions_to_reset_your_password"
            android:textColor="@color/white" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resetLayout"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailReset"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/ic_baseline_email"
                android:drawablePadding="5dp"
                android:hint="@string/Email"
                android:paddingStart="15dp"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/dark_grey"
                android:textSize="20sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/resetBtn"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_bg"
                android:text="@string/ResetPasswordTextView"
                android:textColor="@color/white" />





        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>